--- a/luci-app-eqos/po/zh_Hans/eqos.po
+++ b/luci-app-eqos/po/zh_Hans/eqos.po
@@ -9,12 +9,8 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.0.6\n"
 
-
 msgid "EQoS"
-msgstr "网速控制"
-
-msgid "eqos"
-msgstr "网速控制"
+msgstr "IP限速"
 
 msgid "Comment"
 msgstr "注解"
@@ -28,8 +24,8 @@ msgstr "开启"
 msgid "QoS"
 msgstr "QoS"
 
-msgid "Network speed control service"
-msgstr "网速控制服务"
+msgid "Quality of Service"
+msgstr "IP限速"
 
 msgid "Upload speed (Mbit/s)"
 msgstr "上传速度 (Mbit/s)"
@@ -39,6 +35,3 @@ msgstr "IP限速"
 
 msgid "Total bandwidth"
 msgstr "总带宽"
-
-msgid "Flow control setting"
-msgstr "流控设置"
